@@ -8,7 +8,7 @@ import static truelayer.java.TestUtils.JSON_RESPONSES_LOCATION;
 import static truelayer.java.TestUtils.deserializeJsonFileTo;
 
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import lombok.SneakyThrows;
 import okhttp3.MediaType;
 import okhttp3.ResponseBody;
@@ -25,14 +25,14 @@ class ErrorMapperTests {
     @Test
     @DisplayName("it should build a problem details error object")
     public void shouldBuildAProblemDetailsError() {
-        var logger = mock(TaggedLogger.class);
-        var errorJsonFile = "/payments/401.invalid_signature.json";
-        var sut = new ErrorMapper(logger);
-        var invalidClientResponse = buildErrorResponse(errorJsonFile);
+        TaggedLogger logger = mock(TaggedLogger.class);
+        String errorJsonFile = "/payments/401.invalid_signature.json";
+        ErrorMapper sut = new ErrorMapper(logger);
+        Response invalidClientResponse = buildErrorResponse(errorJsonFile);
 
-        var problemDetails = sut.toProblemDetails(invalidClientResponse);
+        ProblemDetails problemDetails = sut.toProblemDetails(invalidClientResponse);
 
-        var expectedError = deserializeJsonFileTo(errorJsonFile, ProblemDetails.class);
+        ProblemDetails expectedError = deserializeJsonFileTo(errorJsonFile, ProblemDetails.class);
         Assertions.assertEquals(expectedError, problemDetails);
         verify(logger, never()).warn(anyString(), any(Throwable.class));
     }
@@ -41,11 +41,11 @@ class ErrorMapperTests {
     @Test
     @DisplayName("it should build a fallback problem details error object and log a warning")
     public void shouldBuildAFallbackProblemDetailsError() {
-        var logger = mock(TaggedLogger.class);
-        var sut = new ErrorMapper(logger);
-        var invalidClientResponse = buildErrorResponse("/auth/400.invalid_client.json");
+        TaggedLogger logger = mock(TaggedLogger.class);
+        ErrorMapper sut = new ErrorMapper(logger);
+        Response invalidClientResponse = buildErrorResponse("/auth/400.invalid_client.json");
 
-        var problemDetails = sut.toProblemDetails(invalidClientResponse);
+        ProblemDetails problemDetails = sut.toProblemDetails(invalidClientResponse);
 
         assertTrue(problemDetails.getDetail().contains("invalid_client"));
         verify(logger, times(1)).warn(anyString(), any(Throwable.class));
@@ -58,7 +58,7 @@ class ErrorMapperTests {
                 400,
                 ResponseBody.create(
                         MediaType.get("application/json"),
-                        Files.readString(Path.of(new StringBuilder(JSON_RESPONSES_LOCATION)
+                        Files.readAllBytes(Paths.get(new StringBuilder(JSON_RESPONSES_LOCATION)
                                 .append(errorFile)
                                 .toString()))));
     }
